--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://dbUser:<hellomister123>@cluster0.pf0vp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://dbUser:hellomister123@cluster0.pf0vp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
