--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.1",
+    "dotenv": "^16.4.7",
+    "mongodb": "^6.12.0",
     "vitest": "^2.0.3"
   }
 }
